--- a/projects/landing-page/css/styles.css
+++ b/projects/landing-page/css/styles.css
@@ -216,6 +216,20 @@ section.your-active-class .landing__container::after {
     animation: rotate 5s linear 0s infinite forwards reverse;
 }
 
+.scroll-top {
+    position        : fixed;
+    bottom          : 20px;
+    left            : 20px;
+    border-radius   : 50%;
+    border          : none;
+    font-size       : 30px;
+    height          : 50px;
+    width           : 50px;
+    background-color: rgba(255, 255, 255, 0.7);
+    visibility      : hidden;
+    cursor          : pointer;
+}
+
 /* Section Active Styles Keyframe Animations */
 @keyframes rotate {
     from {
